# home-ai-control-plane

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  constraints.txt  pyproject.toml  requirements-test.txt  ruff.toml
.regal/: config.yaml
agents/planner/: Dockerfile  main.py  requirements.txt
cli/: __init__.py  cond.py
config/: .env.litellm.example  .env.notion-sync.example  .env.planner.example  .env.skill-runner.example  .env.supervisor.example  conductor.capabilities.yaml  litellm_config.yaml
contracts/: __init__.py  model_usage.py  task.py
conversation/: copilot-1.md
docs/: PHASE1-E2E-REPORT.md  api-reference.md  architecture.md  conductor-engine.md  data-model.md  notion-sync-analysis.md  policies.md  services.md  skills.md  task-lifecycle.md  testing.md
docs/conductor/: agent-interface.md  capability-spec.md  execution-flow.md  task-model.md
engine/: __init__.py  loader.py
engine/capabilities/: __init__.py  echo.py  filesystem.py  http.py  memory.py
engine/guardrails/: __init__.py  validation.py
engine/interfaces/: __init__.py  agent.py  capability.py  memory.py  task.py
engine/memory/: __init__.py
engine/registry/: __init__.py  capabilities.py
engine/runtime/: __init__.py  async_utils.py  queue.py  store.py
engine/supervisor/: __init__.py  service.py
infra/: docker-compose.yml
policies/: budget.rego  skill_access.rego  task_execution.rego
scripts/: e2e_smoke.py  ingest_memory.py  lint.sh  run_e2e_smoke.sh  setup_notion_db.py
services/notion-sync/: Dockerfile  main.py
skills/: registry.yaml
tests/: conftest.py
(+42 files in other folders)
