[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-engine"
version = "0.1.0"
description = "Minimal orchestration runtime extracted from the Home AI Control Plane."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<0.28",
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
]

[project.scripts]
cond = "cli.cond:main"

[tool.setuptools.packages.find]
include = ["cli*", "engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert (required in tests)
    "ANN401", # dynamically typed Any
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
